src/objects/Financial_Aid__c.object
<CustomObject>
    <description>Houses financial aid and SAP from Banner.</description>
    <fields>
        <fullName>Aid_Year__c</fullName>
        <description>From Banner (robinst_aidy_desc or some other merging of robinst fields?)</description>
        <inlineHelpText>from Banner</inlineHelpText>
        <label>Aid Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Banner_ID__c</fullName>
        <description>Banner ID from related Contact. For FA buttons on these records.</description>
        <formula>Contact__r.Banner_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Banner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_UDCID__c</fullName>
        <description>UDCID from the related Contact. For having FA buttons on these records.</description>
        <formula>Contact__r.UDCID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact UDCID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>The student that the financial aid relates to.</description>
        <inlineHelpText>The student receiving this financial aid.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Aid</relationshipLabel>
        <relationshipName>Financial_Aid</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Counselor__c</fullName>
        <description>Financial Aid Counselor from Banner ; robusdf_value_36</description>
        <inlineHelpText>Financial Aid counselor</inlineHelpText>
        <label>Counselor</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFC_9_Month__c</fullName>
        <description>Earned Family Contribution value from Banner</description>
        <inlineHelpText>Earned Family Contribution</inlineHelpText>
        <label>EFC (9-Month)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Date__c</fullName>
        <description>From Banner ; RORSTAT_PCKG_COMP_DATE</description>
        <inlineHelpText>from Banner</inlineHelpText>
        <label>Package Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reaction__c</fullName>
        <label>Reaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Completely Positive</fullName>
                </value>
                <value>
                    <fullName>2 More Positive</fullName>
                </value>
                <value>
                    <fullName>3 More Negative</fullName>
                </value>
                <value>
                    <fullName>4 Completely Negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP__c</fullName>
        <description>SAP status from Banner</description>
        <inlineHelpText>SAP status from Banner</inlineHelpText>
        <label>Satisfactory Academic Progress (SAP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Probation</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Financial Aid</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Financial Aid Year</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Aid</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>